update to pacman script

--- a/arch_linux/ed_highway.desktop
+++ b/arch_linux/ed_highway.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=Sprite Decomposer
 Comment=Decompose and create animations from a sprite sheet easily.
 Exec=/usr/bin/ed_highway
-Icon=/usr/share/applications/ed_highway.png
+Icon=ed_highway.png
 StartupNotify=true
 Terminal=false
 Type=Application
