--- a/arch_linux/PKGBUILD
+++ b/arch_linux/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Alex <alexzkhr public at gmail dot com>
 
 pkgname=ed_highway
-pkgver=r18.22ac6f4
+pkgver=r89.68bcf80
 pkgrel=1
 pkgdesc='Desktop client of Neutron star routes plotter for Elite Dangerous. Based on https://www.spansh.co.uk/plotter'
 arch=('i686' 'x86_64')
@@ -17,11 +17,11 @@ makedepends=(
 git
 )
 source=(
-'git://github.com/alexzk1/ed_highway.git'
+"git+$url.git"
 )
 sha256sums=('SKIP')
 _gitname='ed_highway'
-prepare() {    
+prepare() {
    cd $_gitname
 }
 
@@ -38,12 +38,12 @@ build() {
 }
 package() {
   cd $_gitname
-  #make INSTALL_ROOT="$pkgdir" install  
+  #make INSTALL_ROOT="$pkgdir" install
   install -Dm755 "$srcdir"/ed_highway/ed_highway "$pkgdir"/usr/bin/ed_highway
-  
-  install -d $pkgdir/usr/share/applications  
+
+  install -d $pkgdir/usr/share/applications
   install -m644 $srcdir/ed_highway/arch_linux/ed_highway.desktop "$pkgdir"/usr/share/applications/
-  
+
   install -d $pkgdir/usr/share/icons/hicolor/128x128/apps/
   install -m644 $srcdir/ed_highway/arch_linux/ed_highway.png "$pkgdir"/usr/share/icons/hicolor/128x128/apps/
 }
